web/styles/compose.css
/* ... */
#send_message_form {
    margin: 0;
    height: 100%;

    .messagebox-wrapper {
        flex: 1;
    }

    .messagebox {
        /* normally 5px 14px; pull in the right and bottom a bit */
        cursor: default;
        padding: 0;
        background: none;
        box-shadow: none;
        border: none;
        height: 100%;
        display: grid;
        /* Vlad's design calls for 122px for the send column
           at its widest; 112px accounts for 6px of gap and
           4px outside padding.

           TODO: get this value into a CSS variable. */
        grid-template: minmax(0, 1fr) 32px / minmax(0, 1fr) 112px;
        grid-template-areas:
            "message-content-container message-send-controls-container"
            "message-formatting-controls-container . ";
        gap: 4px 6px;
        margin-top: 5px;

        @media ((width >= $sm_min) and (width < $mc_min)) {
            /* Drop to a 62px wide send column. */
            grid-template-columns: minmax(0, 1fr) 62px;
        }

        @media (width < $sm_min) {
            /* Drop to a 28px wide send column. */
            grid-template-columns: minmax(0, 1fr) 28px;
        }
    }

    .message_content {
        margin-right: 0;
    }
}

#message-content-container {
    grid-area: message-content-container;
    display: grid;
    grid-template: minmax(0, 1fr) / minmax(0, 1fr) var(
            --composebox-buttons-width
        );
    grid-template-areas: "message-content composebox-buttons";
}

#message-content-container .composebox-buttons {
    grid-area: composebox-buttons;
    /* z-index is needed to avoid flickering of cursor and the
    button when hovering it in preview mode. */
    z-index: 1;
    padding-top: 1px;
    padding-right: 1px;
    height: max-content;

    button {
        width: 24px;
        border: none;
        aspect-ratio: 1 / 1;
        background-color: var(--color-composebox-button-background);
        color: var(--color-composebox-button);
        border-radius: 3px;
        display: flex;
        align-items: center;
        justify-content: center;
        opacity: 0;
        transition:
            opacity 0.4s ease-in,
            color 0.1s ease-in,
            background-color 0.1s ease-in;

        &:hover {
            background-color: var(--color-composebox-button-background-hover);
            color: var(--color-composebox-button-hover);
        }

        &:focus {
            outline: 0;
        }

        &:focus-visible {
            outline: 2px solid var(--color-outline-focus);
        }
    }

    .collapse-composebox-button {
        display: none;
    }
}

#compose-textarea,
#preview-message-area-container {
    grid-area: message-content;
}

#compose-textarea,
#preview_message_area {
    margin-right: calc(var(--composebox-buttons-width) * -1);
    padding-right: var(--composebox-buttons-width);
}

#preview-message-area-container {
    /* Keep preview container invisible outside
       of preview mode. */
    display: none;
}

#message-send-controls-container {
    grid-area: message-send-controls-container;
    /* A columnar flex does a nice job here
       holding Drafts to the top of the
       container, and the send button to
       the bottom--even as the compose box
       expands or contracts. */
    display: flex;
    flex-direction: column;
    /* With a columnar flex, this ensures that
       send controls occupy the same space as
       the adjacent textbox. */
    justify-content: space-between;
    /* We add 6px of margin to the grid-gap of
       6px, for 12px of space between the Send
       button and the textarea. */
    margin-left: 6px;

    @media (width < $sm_min), ((width >= $sm_min) and (width < $mc_min)) {
        margin-left: 0;
    }
}

#message-formatting-controls-container {
    grid-area: message-formatting-controls-container;
}

#compose-limit-indicator:not(:empty) {
    font-size: 12px;
    color: var(--color-limit-indicator);
    width: max-content;

    /* Keep the limit indicator just above
       and aligned with the send button.
       `:not(:empty)` prevents the padding
       and margin-top from affecting layout
       in the controls area when no indicator
       is present. */
    margin-top: auto;
    padding: 3px 3px 3px 0;

    &.over_limit {
        color: var(--color-limit-indicator-over-limit);
        font-weight: bold;
    }
}

#compose {
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 4;
}

#compose-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: auto;
}

#compose_top {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    /* Matched to 6px grid-gap on .messagebox grid. */
    padding-bottom: 6px;
}

#compose_top_right {
    display: flex;
    align-items: center;
    height: var(--compose-recipient-box-min-height);
    /* Align to compose controls; that's 112px width,
       plus 6px of grid gap for 118px here.

       TODO: Make variables here; expanded use of grid
       on the compose box will make these unnecessary,
       eventually. */
    width: calc(112px + 6px);
    justify-content: flex-end;

    @media ((width >= $sm_min) and (width < $mc_min)) {
        /* Align to compose controls at narrower widths */
        width: calc(62px + 6px);
    }

    @media (width < $sm_min) {
        /* Don't attempt to control the width
           at narrowest widths. */
        width: auto;
    }

    & button {
        background: transparent;
        color: inherit;
        font-size: 15px;
        font-weight: normal;
        line-height: 20px;
        opacity: 0.7;
        border: 0;
        padding: 0;
        margin-left: 4px;
        vertical-align: unset;
        text-shadow: none;

        &:hover {
            opacity: 1;
        }
    }
}

#compose_close {
    display: none;
}
/* ... */

